--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,18 +97,12 @@ android {
   lint {
     disable 'InvalidPackage'
   }
-
-  playConfigs {
-    register("release") {
-      enabled = true
-    }
-  }
 }
 
 play {
   serviceAccountCredentials = file('keys/play_access.json')
   defaultToAppBundles = true
-  enabled = false
+  resolutionStrategy = 'ignore'
 }
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
