--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -3,22 +3,22 @@ buildscript {
     'compileSdk': 33,
     'minSdk': 24,
     'accompanist': '0.25.1',
-    'androidGradlePlugin': '7.3.1',
+    'androidGradlePlugin': '8.0.2',
     'androidxActivity': '1.6.1',
     'androidxJunitRunner': '1.1.4',
     'androidxCore': '1.9.0',
     'benchmark': '1.1.1',
-    'composeBom': '2022.10.00',
+    'composeBom': '2023.05.01',
     'coroutines': '1.6.4',
     'datastore': '1.0.0',
     'debugdrawer': '0.26.0',
-    'glance': '1.0.0-alpha05',
+    'glance': '1.0.0-beta01',
     'jdkDesugar': '1.1.5',
     'junit': '4.13.2',
-    'kotlin': '1.7.10',
+    'kotlin': '1.8.20',
     'leakcanary': '2.9.1',
     'lifecycle': '2.5.1',
-    'molecule': '0.5.0',
+    'molecule': '0.9.0',
     'moshi': '1.14.0',
     'okhttp': '4.10.0',
     'osmdroid': '6.1.13',
