--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -16,14 +16,16 @@ buildscript {
     'jdkDesugar': '1.1.5',
     'junit': '4.13.2',
     'kotlin': '1.8.20',
+    'ksp': '1.8.20-1.0.11',
     'leakcanary': '2.9.1',
     'lifecycle': '2.5.1',
     'molecule': '0.9.0',
-    'moshi': '1.14.0',
-    'okhttp': '4.10.0',
+    'moshi': '1.15.0',
+    'moshix': '0.22.1',
+    'okhttp': '4.11.0',
     'osmdroid': '6.1.13',
     'playPublisher': '3.7.0',
-    'profileInstaller': '1.2.0',
+    'profileInstaller': '1.3.1',
     'retrofit': '2.9.0',
     'testParameterInjector': '1.9',
     'timber': '4.7.1',
@@ -86,7 +88,11 @@ buildscript {
     'molecule' : "app.cash.molecule:molecule-gradle-plugin:${versions.molecule}",
     'moshi': [
       'core': "com.squareup.moshi:moshi:${versions.moshi}",
-      'kotlin': "com.squareup.moshi:moshi-kotlin:${versions.moshi}",
+      'kotlinCodegen': "com.squareup.moshi:moshi-kotlin-codegen:${versions.moshi}",
+    ],
+    'moshix': [
+      'sealedRuntime': "dev.zacsweers.moshix:moshi-sealed-runtime:${versions.moshix}",
+      'sealedCodegen': "dev.zacsweers.moshix:moshi-sealed-codegen:${versions.moshix}",
     ],
     'okhttp': [
       'core': "com.squareup.okhttp3:okhttp:${versions.okhttp}",
